# catdex

./: Cargo.toml  README.md  set_db_url.sh
migrations/2024-05-03-131238_create_cats/: up.sql
src/: .main.rs.swp  main.rs  models.rs  schema.rs
static/: add.html  catdetail.html  index.html
