[package]
name = "catdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
actix-web = "4.5.1"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
r2d2 = "0.8.10"
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
handlebars = {version = "5.1.2", features = ["dir_source"] }

